// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CheckBox default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <span
      className="checkbox-wrapper"
    >
      <label>
        <input
          checked={true}
          onChange={[Function]}
          type="checkbox"
        />
        Open Now
      </label>
    </span>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            CheckBox
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  CheckBox
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      label
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Open Now
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      onChange
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          onChange
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      checked
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          true
                        </span>
                        "
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              CheckBox
              " Component
            </h2>
            <table
              className="css-1uhv8nx e1vdo5380"
            >
              <thead>
                <tr>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    property
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    propType
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    required
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    default
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    label
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    onChange
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    checked
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FlatButton dark theme 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="flat-button dark"
      onClick={[Function]}
    >
      flat button
    </button>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            FlatButton
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            dark theme
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    FlatButton
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        theme
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            dark
                          </span>
                          "
                        </span>
                      </span>
                      
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    flat button
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    FlatButton
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              FlatButton
              " Component
            </h2>
            <table
              className="css-1uhv8nx e1vdo5380"
            >
              <thead>
                <tr>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    property
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    propType
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    required
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    default
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    children
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    theme
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    fullWidth
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    onClick
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    <span
                      style={
                        Object {
                          "color": "#170",
                        }
                      }
                    >
                      onClick
                    </span>
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FlatButton default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="flat-button"
      onClick={[Function]}
    >
      flat button
    </button>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            FlatButton
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    FlatButton
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    flat button
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    FlatButton
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              FlatButton
              " Component
            </h2>
            <table
              className="css-1uhv8nx e1vdo5380"
            >
              <thead>
                <tr>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    property
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    propType
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    required
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    default
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    children
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    theme
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    fullWidth
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    onClick
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    <span
                      style={
                        Object {
                          "color": "#170",
                        }
                      }
                    >
                      onClick
                    </span>
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots FlatButton fullwidth 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      className="flat-button fullwidth"
      onClick={[Function]}
    >
      flat button
    </button>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            FlatButton
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            fullwidth
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    FlatButton
                  </span>
                  <span>
                    <span>
                       
                      <span
                        style={Object {}}
                      >
                        fullWidth
                      </span>
                      
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 33,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    flat button
                  </span>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    FlatButton
                    &gt;
                  </span>
                </div>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              FlatButton
              " Component
            </h2>
            <table
              className="css-1uhv8nx e1vdo5380"
            >
              <thead>
                <tr>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    property
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    propType
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    required
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    default
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    children
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    theme
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    fullWidth
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    onClick
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    <span
                      style={
                        Object {
                          "color": "#170",
                        }
                      }
                    >
                      onClick
                    </span>
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Select default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <span
      className="select-wrapper"
    >
      <label>
        <select
          onChange={[Function]}
        >
          <option
            disabled={true}
            hidden={true}
            value=""
          >
            Price
          </option>
          <option
            value="all"
          >
            All
          </option>
          <option
            value="$"
          >
            $
          </option>
          <option
            value="$$"
          >
            $$
          </option>
          <option
            value="$$$"
          >
            $$$
          </option>
          <option
            value="$$$$"
          >
            $$$$
          </option>
        </select>
      </label>
    </span>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "#444",
            "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            Select
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            className="css-r8d96o eyvlbql0"
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  Select
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      onChange
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }
                        >
                          onChange
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      placeholder
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Price
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      options
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          [
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              'All'
                            </span>
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              '$'
                            </span>
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              '$$'
                            </span>
                          </span>
                          ,
                          <span>
                            <span>
                              <br />
                                
                                
                            </span>
                            …
                          </span>
                          <span>
                            <br />
                              
                          </span>
                          ]
                        </span>
                        }
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              className="css-1naocv3 eva467m0"
              onClick={[Function]}
            >
              <div
                className="css-lvl6aa eva467m1"
              >
                <div
                  style={
                    Object {
                      "marginBottom": 6,
                    }
                  }
                >
                  Copied!
                </div>
                <div>
                  Copy
                </div>
              </div>
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              Select
              " Component
            </h2>
            <table
              className="css-1uhv8nx e1vdo5380"
            >
              <thead>
                <tr>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    property
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    propType
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    required
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    default
                  </th>
                  <th
                    className="css-11b5gui e6fp4ir1"
                  >
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    onChange
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    placeholder
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    options
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
                <tr>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    value
                  </td>
                  <td
                    className="css-1qcb1f7 e6fp4ir0"
                  >
                    <span />
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    yes
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  >
                    -
                  </td>
                  <td
                    className="css-11b5gui e6fp4ir0"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
